instructions into test

--- a/lecture/week-1/test.ipynb
+++ b/lecture/week-1/test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see this in your forked repository!"
+    "You should see this in your forked repository! Check out 'in-class-use-instructions.ipynb' for instructions on how to keep your fork up-to-date with changes."
    ]
   }
  ],
