--- a/lecture/week-1/test.ipynb
+++ b/lecture/week-1/test.ipynb
@@ -4,31 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see this in your forked repository! Check out README.md for instructions on how to keep your fork up-to-date with changes."
+    "*You should see this in your forked repository! Check out README.md for instructions on how to keep your fork up-to-date with changes.*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### If time: Exercises\n",
-    "Calculate the total cost of buying 5 items, each priced at $0.99, and print the result.\n",
+    "### In Lecture Exercises\n",
+    "1. Calculate the total cost of buying 5 items, each priced at $0.99, and print the result.\n",
     "\n",
-    "Check if the result of dividing 10 by 3 is equal to 3.33 and print the boolean result.\n",
+    "2. Check if the result of dividing 10 by 3 is equal to 3.33 and print the boolean result.\n",
     "\n",
-    "Print the boolean result of whether 0.1 + 0.2 is exactly equal to 0.3.\n",
+    "3. Print the boolean result of whether 0.1 + 0.2 is exactly equal to 0.3.\n",
     "\n",
-    "Multiply the integer 7 by the floating-point number 0.5 and print the result.\n",
+    "4. Multiply the integer 7 by the floating-point number 0.5 and print the result.\n",
     "\n",
-    "Divide 5 by 2, store the result in a variable, and then check if it is greater than 2.5. Print the boolean result.\n",
+    "5. Divide 5 by 2, store the result in a variable, and then check if it is greater than 2.5. Print the boolean result.\n",
     "\n",
-    "    Now add 7 to that variable. Print the variable. (Hint: The variable should now equal 17.)\n",
+    "    5a. Now add 7 to that variable. Print the variable. (Hint: The variable should now equal 17.)\n",
     "\n",
-    "Combine the strings \"Good\" and \"Morning\"\n",
+    "6. Combine the strings \"Good\" and \"Morning\"\n",
     "\n",
-    "Check if strings \"python\" and \"PYTHON\" are equal to each other and print the result.\n",
+    "7. Check if strings \"python\" and \"PYTHON\" are equal to each other and print the result.\n",
     "\n",
-    "Check if 10 is greater than 5 or if 25 is less than 30. Print the boolean result."
+    "8. Check if 10 is greater than 5 or if 25 is less than 30. Print the boolean result."
    ]
   }
  ],
