--- a/labs/week-1/Lab_1.ipynb
+++ b/labs/week-1/Lab_1.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Welcome to Lab!**"
+    "**Welcome to Lab!**\n",
+    "\n",
+    "\n",
+    "![Kona side eye](IMG_2468.jpg)"
    ]
   },
   {
@@ -14,7 +17,8 @@
     "**One: Warming Up:**\n",
     "1. Logistics.\n",
     "2. Boolean Review (true/false; and/or/not; one common error)\n",
-    "3. Pseudocode."
+    "3. String concatenation. \n",
+    "4. Pseudocode."
    ]
   },
   {
@@ -37,7 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Type in Program below using input() and print() only."
+    "# Type in Program below using input() and print() only.\n",
+    "\n",
+    "# Step 1:\n",
+    "\n",
+    "# Step 2:\n",
+    "\n",
+    "# Step 3:"
    ]
   },
   {
@@ -62,7 +72,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Type in Larry's Program below using input(), print(), and boolean logic only. NO IF STATEMENTS!!"
+    "# Type in Larry's Program below using input(), print(), and boolean logic only. NO IF STATEMENTS!!\n",
+    "# What can we reuse from the above?\n",
+    "\n",
+    "# Step 1:\n",
+    "\n",
+    "# Step 2:\n",
+    "\n",
+    "# Step 3:\n",
+    "\n",
+    "# Step 4:"
    ]
   },
   {
@@ -88,7 +107,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Type in Larry's Upgraded Program below: input(), print(), and boolean logic only. NO IF STATEMENTS!!"
+    "# Type in Larry's Upgraded Program below: input(), print(), and boolean logic only. NO IF STATEMENTS!!\n",
+    "# What can we reuse from the above?\n",
+    "\n",
+    "# Step 1:\n",
+    "\n",
+    "# Step 2:\n",
+    "\n",
+    "# Step 3:\n",
+    "\n",
+    "# Step 4:"
    ]
   },
   {
@@ -106,7 +134,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Weekend Program Below using input(), print(), and boolean logic only. NO IF STATEMENTS!!"
+    "# Weekend Program Below using input(), print(), and boolean logic only. NO IF STATEMENTS!!\n",
+    "\n",
+    "# Step 1:\n",
+    "\n",
+    "# Step 2:\n",
+    "\n",
+    "# Step 3:\n",
+    "\n",
+    "# Step 4:"
    ]
   }
  ],
