fleshing out warmup exercises. Code to be used will be pasted in from external source live during lab.

--- a/labs/week-1/Lab_1.ipynb
+++ b/labs/week-1/Lab_1.ipynb
@@ -15,10 +15,45 @@
    "metadata": {},
    "source": [
     "**One: Warming Up:**\n",
-    "1. Logistics.\n",
-    "2. Boolean Review (true/false; and/or/not; one common error)\n",
-    "3. String concatenation. \n",
-    "4. Pseudocode."
+    "1. Logistics. We will likely run out of time today. That's okay.\n",
+    "2. String concatenation. (using \"+\") \n",
+    "3. Boolean Review (true/false; and/or/not; one common error)\n",
+    "4. Pseudocode: Planning your code.\n",
+    "5. Modularization and variation: doing less work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kim\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Strings\n",
+    "# first_name = 'Hoon'\n",
+    "# last_name = 'Kim'\n",
+    "# print(first_name + last_name)\n",
+    "\n",
+    "## Whitespace?\n",
+    "# print(first_name + ??? + last_name)\n",
+    "\n",
+    "## Playing with booleans\n",
+    "# truth = True\n",
+    "# lies = False\n",
+    "# print(str(truth and lies))\n",
+    "# print(str(truth or lies))\n",
+    "# print(not(truth))\n",
+    "\n",
+    "## Careful with your equals around booleans.\n",
+    "# is_Hoon = str(first_name == 'Hoon' or 'Kim')\n",
+    "# print(is_Hoon)\n"
    ]
   },
   {
@@ -43,11 +78,11 @@
    "source": [
     "# Type in Program below using input() and print() only.\n",
     "\n",
-    "# Step 1:\n",
+    "# Step 1: Take user name from user.\n",
     "\n",
-    "# Step 2:\n",
+    "# Step 2: Take password from user.\n",
     "\n",
-    "# Step 3:"
+    "# Step 3: Return message."
    ]
   },
   {
@@ -123,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Five: Is it the Weekend yet?**\n",
+    "**Five: Is it the weekend yet?**\n",
     "\n",
     "Let's write a program that tells the user whether the day they entered (e.g., 'Monday') is in the weekend."
    ]
@@ -147,8 +182,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
