--- a/labs/week-1/Lab_1.ipynb
+++ b/labs/week-1/Lab_1.ipynb
@@ -24,36 +24,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kim\n"
+      "False\n",
+      "False\n"
      ]
     }
    ],
    "source": [
     "## Strings\n",
-    "# first_name = 'Hoon'\n",
-    "# last_name = 'Kim'\n",
+    "first_name = 'Kim'\n",
+    "last_name = 'Kim'\n",
+    "# last_name = 'Parker'\n",
     "# print(first_name + last_name)\n",
     "\n",
     "## Whitespace?\n",
-    "# print(first_name + ??? + last_name)\n",
+    "# print(first_name + ' ' + last_name)\n",
     "\n",
-    "## Playing with booleans\n",
-    "# truth = True\n",
-    "# lies = False\n",
-    "# print(str(truth and lies))\n",
-    "# print(str(truth or lies))\n",
-    "# print(not(truth))\n",
+    "# Playing with booleans\n",
+    "truth = 4\n",
+    "lies = False\n",
+    "# print(str(truth and lies)) # both are true -> true; otherwise -> false\n",
+    "# print(str(truth or lies)) # either is true -> true; neither is true -> false\n",
+    "print(not(truth))\n",
     "\n",
     "## Careful with your equals around booleans.\n",
-    "# is_Hoon = str(first_name == 'Hoon' or 'Kim')\n",
-    "# print(is_Hoon)\n"
+    "is_Hoon = str(first_name == ('Hoon' or 'Kim'))\n",
+    "print(is_Hoon)\n"
    ]
   },
   {
@@ -72,17 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Larry! Your password is King\n"
+     ]
+    }
+   ],
    "source": [
     "# Type in Program below using input() and print() only.\n",
     "\n",
     "# Step 1: Take user name from user.\n",
-    "\n",
+    "user_name = input(\"Please enter your user name:\")\n",
     "# Step 2: Take password from user.\n",
-    "\n",
-    "# Step 3: Return message."
+    "password = input(\"Please enter password:\")\n",
+    "# Step 3: Return message.\n",
+    "print(\"Hi \" + user_name + \"! Your password is \" + password)\n",
+    "# str(something_that_isnt_a_string)"
    ]
   },
   {
@@ -103,20 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Type in Larry's Program below using input(), print(), and boolean logic only. NO IF STATEMENTS!!\n",
     "# What can we reuse from the above?\n",
     "\n",
-    "# Step 1:\n",
-    "\n",
-    "# Step 2:\n",
-    "\n",
-    "# Step 3:\n",
-    "\n",
-    "# Step 4:"
+    "# Step 1: Take user name from user.\n",
+    "user_name = input(\"Please enter your user name:\")\n",
+    "# Step 2: Take password from user.\n",
+    "password = input(\"Please enter password:\")\n",
+    "# Step 3: Is it Larry????? Is it his password?\n",
+    "outcome = (user_name == 'Larry' and password == 'coding_is_fun')\n",
+    "\n"
    ]
   },
   {
@@ -138,20 +150,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Type in Larry's Upgraded Program below: input(), print(), and boolean logic only. NO IF STATEMENTS!!\n",
     "# What can we reuse from the above?\n",
     "\n",
-    "# Step 1:\n",
+    "# Step 1: Take user name from user.\n",
+    "user_name = input(\"Please enter your user name:\")\n",
+    "# Step 2: Take password from user.\n",
+    "password = input(\"Please enter password:\")\n",
+    "# Step 3: Is it Larry????? Is it his password? Or is it any of his friends?\n",
+    "is_larry = (user_name == 'Larry' and password == 'coding_is_fun') \n",
+    "is_falken = (user_name == 'Falken' and password == 'Joshua')\n",
+    "is_setec = (user_name == 'Setec Astronomy' and password == 'too many secrets')\n",
+    "is_neo = (user_name == 'Neo' and password == 'False')\n",
     "\n",
-    "# Step 2:\n",
-    "\n",
-    "# Step 3:\n",
-    "\n",
-    "# Step 4:"
+    "# Step 4 print the outcome!\n",
+    "print(is_larry or is_falken or is_setec or is_neo)"
    ]
   },
   {
@@ -165,17 +190,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Weekend Program Below using input(), print(), and boolean logic only. NO IF STATEMENTS!!\n",
     "\n",
-    "# Step 1:\n",
+    "# Step 1: take user input\n",
+    "day_user_input = input(\"Please input a day of the week:\")\n",
     "\n",
-    "# Step 2:\n",
+    "# Step 2: check if saturday or sunday\n",
+    "is_weekend = (day_user_input == 'Saturday' or day_user_input == 'Sunday')\n",
     "\n",
-    "# Step 3:\n",
+    "# Step 3: Print\n",
+    "print(is_weekend)\n",
     "\n",
     "# Step 4:"
    ]
