--- a/lecture/week-2/exercises/taxrate.ipynb
+++ b/lecture/week-2/exercises/taxrate.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "12\n"
      ]
     }
    ],
    "source": [
     "STANDARD_DEDUCTION = 12400\n",
     "\n",
-    "rate = \"\"\n",
+    "# rate = 0\n",
     "\n",
     "total_income = int(input(\"Enter your income:\"))\n",
     "\n",
@@ -35,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number:  0\n",
-      "Number:  1\n",
-      "Number:  2\n",
-      "Number:  3\n",
-      "Number:  4\n"
+      "Number:;0;word\n",
+      "Number:;1;word\n",
+      "Number:;2;word\n",
+      "Number:;3;word\n",
+      "Number:;4;word\n"
      ]
     }
    ],
@@ -54,8 +54,25 @@
     "i = 0\n",
     "\n",
     "while i < 5:\n",
-    "    print(\"Number: \",i)\n",
+    "    print(\"Number:\",i,\"word\",sep=\";\")\n",
     "    i=i+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this;is;a;sentence\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"this\",\"is\",\"a\",\"sentence\",sep=\";\")"
    ]
   },
   {
