--- a/lecture/week-2/exercises/guess_the_number.ipynb
+++ b/lecture/week-2/exercises/guess_the_number.ipynb
@@ -29,11 +29,101 @@
     "\n",
     "print('You got it right!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your guess is too high.\n",
+      "How many guesses it took: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_number = 33\n",
+    "\n",
+    "not_correct = True \n",
+    "\n",
+    "number_of_guesses = 0\n",
+    "\n",
+    "# while the numbers don't match\n",
+    "while not_correct:\n",
+    "    #ask user for a guess\n",
+    "    guessed_number = int(input(\"Guess a number between 1 and 100: \"))\n",
+    "\n",
+    "    #add that to the tally\n",
+    "    number_of_guesses += 1 # a shorter way of saying '= number_of_guesses + 1'\n",
+    "\n",
+    "    # check whether guess matches number\n",
+    "    if guessed_number == correct_number:\n",
+    "        # if guess matches correct number, then set boolean variable to \"False\" indicating that\n",
+    "        # it's okay to exit the while loop\n",
+    "        not_correct = False\n",
+    "        print(\"you guessed it right\")\n",
+    "\n",
+    "    # if guessed number is not correct number, then do this    \n",
+    "    else:\n",
+    "        if guessed_number < correct_number:\n",
+    "            print(\"You're too low\")\n",
+    "        else:\n",
+    "            print(\"Your guess is too high.\")\n",
+    "        # print(\"you guessed it wrong\")\n",
+    "\n",
+    "\n",
+    "print(\"How many guesses it took:\",number_of_guesses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guess_correct = False\n",
+    "not guess_correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
