--- a/lecture/week-2/exercises/guess_the_number.ipynb
+++ b/lecture/week-2/exercises/guess_the_number.ipynb
@@ -1,49 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Name: Jonathan Frankle\n",
-    "### Filename: guess_the_number.py\n",
-    "### Description: Plays the number guessing game.\n",
-    "\n",
-    "# V1: Basic number guesser. Reports right or wrong only.\n",
-    "\n",
-    "import random\n",
-    "\n",
-    "# Pick a random number between 1 and 100.\n",
-    "answer = random.randint(1, 100)\n",
-    "\n",
-    "guess = int(input('Guess a number between 1 and 100: '))\n",
-    "\n",
-    "# A false start here would be \"if guess != answer\" which would execute just once.\n",
-    "\n",
-    "# Repeatedly let the user try to guess the number.\n",
-    "while guess != answer:\n",
-    "    print('Nope, sorry. Try again.')\n",
-    "\n",
-    "    guess = int(input('Guess a number between 1 and 100: '))\n",
-    "\n",
-    "print('You got it right!')"
+    "### In Class Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your guess is too high.\n",
-      "How many guesses it took: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "correct_number = 33\n",
     "\n",
@@ -79,24 +47,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "guess_correct = False\n",
-    "not guess_correct"
+    "### Sample Code: Using a Library to Create a Random Number"
    ]
   },
   {
@@ -104,7 +58,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Name: Jonathan Frankle\n",
+    "### Filename: guess_the_number.py\n",
+    "### Description: Plays the number guessing game.\n",
+    "\n",
+    "# V1: Basic number guesser. Reports right or wrong only.\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "# Pick a random number between 1 and 100.\n",
+    "answer = random.randint(1, 100)\n",
+    "\n",
+    "guess = int(input('Guess a number between 1 and 100: '))\n",
+    "\n",
+    "# A false start here would be \"if guess != answer\" which would execute just once.\n",
+    "\n",
+    "# Repeatedly let the user try to guess the number.\n",
+    "while guess != answer:\n",
+    "    print('Nope, sorry. Try again.')\n",
+    "\n",
+    "    guess = int(input('Guess a number between 1 and 100: '))\n",
+    "\n",
+    "print('You got it right!')"
+   ]
   }
  ],
  "metadata": {
