adding more content to lab2

--- a/labs/week-2/Lab_2.ipynb
+++ b/labs/week-2/Lab_2.ipynb
@@ -16,29 +16,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Warmup </h3>\n",
+    "<h3> Logistics (1 minutes) <br> </h3>\n",
+    "<h4> How was last class? <br> <br> <H4>\n",
+    "\n",
+    "<h3> Warmup (5 minutes) </h3>\n",
     "\n",
     "<h4>\n",
-    "Can every else statement be rewritten as an elif statement? Why or why not? <br>\n",
-    "\n",
-    "Why does Python need indentation? <br>\n",
-    "\n",
-    "Can you ever create an infinite if-statement? Why or why not? <br>\n",
-    "\n",
-    "Your program has an outer while-loop that runs for 10 iterations. <br> \n",
-    "It has two inner while-loops that run one following the other. <br> \n",
-    "The first inner while loop runs for 7 iterations and contains one print statement. <br>\n",
-    "The second inner while loop runs for 5 iterations and contains two print statements. <br>\n",
-    "How many times does the program print? <br>\n",
-    "\n",
-    "Do if-statements have types? Do while-loops have types?\n",
+    "* Can every else statement be rewritten as an elif statement? Why or why not? <br><br>\n",
+    "* Why does Python need indentation? <br><br>\n",
+    "* Can you ever create an infinite if-statement? Why or why not? <br><br>\n",
+    "* Your program has an outer while-loop that runs for 10 iterations. <br> <br>\n",
+    "* It has two inner while-loops that run one following the other. <br> <br>\n",
+    "* The first inner while loop runs for 7 iterations and contains one print statement. <br><br>\n",
+    "* The second inner while loop runs for 5 iterations and contains two print statements. <br><br>\n",
+    "* How many times does the program print? <br><br>\n",
+    "* Do if-statements have types? Do while-loops have types?\n",
     "</h4>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h3> Hotlanes Review (20 minutes) </h3>\n",
+    "<h4> * In broad terms, what did Hotlanes requires you to do? <br> <br>\n",
+    "* What was challenging about Hotlanes? <br><br>\n",
+    "* Any other comments/things that stood out about Hotlanes?\n",
+    "\n",
+    "<br><br><br><br><br><br><br><br><br><br><br><br>\n",
+    "<h3> Hot Lanes in five sentences.</h3>\n",
+    "<h4>\n",
+    "1. If it is morning rush-hour, then the HOT-lanes are in effect east-bound. <br><br>\n",
+    "2. This means that a commuter can only take I-42 east-bound if they have three or more people in the car or they're willing to pay the tolls. <br><br>\n",
+    "3. If it's evening rush-hour, then the HOT-lanes are in effect west-bound. <br><br>\n",
+    "4. This means that a commuter can only take I-42 west-bound if they have three or more people in the car or they're willing to pay the tolls. <br><br>\n",
+    "5. At any other time of day or in any other direction, the HOT-lanes aren't in effect, so the commuter is free to use I-42 with no worries. <br><br>\n",
+    "</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Truth Tables ###\n",
+    "\n",
+    "# time      | direction | HOT_lanes_in_effect\n",
+    "# -------------------------------------------\n",
+    "# no        | east      |\n",
+    "# no        | west      |\n",
+    "# morning   | east      |\n",
+    "# morning   | west      |\n",
+    "# evening   | east      |\n",
+    "# evening   | west      |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Putting the truth table into practice (code)\n",
+    "# assume inputs are already given.\n",
+    "\n",
+    "# Eastbound hotlane restrictions in effect\n",
+    "eastbound_hotlane_in_effect = (time == 'morning' and direction == 'east')\n",
+    "# Westbound hotlane restrictions in effect\n",
+    "westbound_hotlane_in_effect = (time == 'afternoon' and direction == 'west')\n",
+    "\n",
+    "# Number of people.\n",
+    "under_floor = (pax == '1' or pax == '2')\n",
+    "\n",
+    "# True at all times/direction/pax EXCEPT (east & morning OR west & afternoon) AND pax < 3\n",
+    "allowed_on_highway = not((westbound_hotlane_in_effect or eastbound_hotlane_in_effect) and under_floor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Using If/Elif/Else Logic and While Loops: Meet Eliza </h3>\n",
+    "\n",
+    "http://psych.fullerton.edu/mbirnbaum/psych101/Eliza.htm\n",
+    "\n",
+    "Let's build a much less sophisticated replica? of Eliza."
+   ]
   },
   {
    "cell_type": "code",
