cosmetic changes git push

--- a/labs/week-2/Lab_2.ipynb
+++ b/labs/week-2/Lab_2.ipynb
@@ -17,7 +17,12 @@
    "metadata": {},
    "source": [
     "<h3> Logistics (1 minutes) <br> </h3>\n",
-    "<h4> How was last class? <br> <br> <H4>\n",
+    "<h4> How was last class? <br> <br> \n",
+    "\"Lecture and Lab\"\n",
+    "</h4>\n",
+    "\n",
+    "\n",
+    "<br>\n",
     "\n",
     "<h3> Warmup (5 minutes) </h3>\n",
     "\n",
