adding comments for eliza exercise

--- a/labs/week-2/Lab_2.ipynb
+++ b/labs/week-2/Lab_2.ipynb
@@ -114,7 +114,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Eliza v1.\n",
+    "\n",
+    "# Eliza introduces itself and invites user input.\n",
+    "print (\"Hello, I am Eliza. What's on your mind?\")\n",
+    "\n",
+    "command = input(\"> \")\n",
+    "\n",
+    "# How Eliza should work:\n",
+    "# 1. Eliza should stay engaged until told to quit.\n",
+    "# 2. Eliza should give tailored responses to certain command keywords.\n",
+    "# 3. Commands include: Hello; Weather;\n",
+    "# 4. Catchall response to everything else.\n",
+    "# 5. Eliza should say goodbye when session is over.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliza v2. Therapists gotta eat too.\n",
+    "\n",
+    "# Additional features:\n",
+    "# 1. Escaping the infinite while loop problem.\n",
+    "# 2. Interaction-driven food and hunger mechanics.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliza v3: Antitrust edition.\n",
+    "\n",
+    "# Additional features:\n",
+    "# 1. Alexa-Bezos mode.\n",
+    "# 2. Escape from Alexa-hell."
+   ]
   }
  ],
  "metadata": {
