more comments added

--- a/labs/week-2/Lab_2.ipynb
+++ b/labs/week-2/Lab_2.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "command = input(\"> \")\n",
     "\n",
-    "# How Eliza should work:\n",
+    "# How Eliza should work: (what tools should we use?)\n",
     "# 1. Eliza should stay engaged until told to quit.\n",
     "# 2. Eliza should give tailored responses to certain command keywords.\n",
     "# 3. Commands include: Hello; Weather;\n",
@@ -139,7 +139,7 @@
    "source": [
     "# Eliza v2. Therapists gotta eat too.\n",
     "\n",
-    "# Additional features:\n",
+    "# Additional features: (how to implement them?)\n",
     "# 1. Escaping the infinite while loop problem.\n",
     "# 2. Interaction-driven food and hunger mechanics.\n",
     "\n"
@@ -153,7 +153,7 @@
    "source": [
     "# Eliza v3: Antitrust edition.\n",
     "\n",
-    "# Additional features:\n",
+    "# Additional features: (how to implement them?)\n",
     "# 1. Alexa-Bezos mode.\n",
     "# 2. Escape from Alexa-hell."
    ]
