cosmetic changes - add photo

--- a/labs/week-2/Lab_2.ipynb
+++ b/labs/week-2/Lab_2.ipynb
@@ -5,6 +5,10 @@
    "metadata": {},
    "source": [
     "<h1> Lab 2 </h1>\n",
+    "\n",
+    "![Kona2](Photo_2024-09-11-11-50-39.jpeg)\n",
+    "\n",
+    "\n",
     "<h2> Agenda for the day: <br> </h2>\n",
     "<h3> One. Logistics and Warmup <br>\n",
     "Two. Recap of Last Week's Problem Set <br>\n",
