cosmetic changes - add inforgraphic

--- a/labs/week-2/Lab_2.ipynb
+++ b/labs/week-2/Lab_2.ipynb
@@ -23,8 +23,10 @@
     "<h3> Logistics (1 minutes) <br> </h3>\n",
     "<h4> How was last class? <br> <br> \n",
     "\"Lecture and Lab\"\n",
+    "<br>\n",
     "</h4>\n",
     "\n",
+    "![Remote vs Local](remote-vs-loca-infographic.png)\n",
     "\n",
     "<br>\n",
     "\n",
