upload lab code

--- a/labs/week-2/Lab_2.ipynb
+++ b/labs/week-2/Lab_2.ipynb
@@ -26,7 +26,7 @@
     "<br>\n",
     "</h4>\n",
     "\n",
-    "![Remote vs Local](remote-vs-loca-infographic.png)\n",
+    "![Remote_v_Local](remote-vs-loca-infographic.png)\n",
     "\n",
     "<br>\n",
     "\n",
@@ -75,24 +75,35 @@
     "\n",
     "# time      | direction | HOT_lanes_in_effect\n",
     "# -------------------------------------------\n",
-    "# no        | east      |\n",
-    "# no        | west      |\n",
-    "# morning   | east      |\n",
-    "# morning   | west      |\n",
-    "# evening   | east      |\n",
-    "# evening   | west      |"
+    "# no        | east      |  False\n",
+    "# no        | west      |  False\n",
+    "# morning   | east      |  True\n",
+    "# morning   | west      |  False\n",
+    "# evening   | east      |  False\n",
+    "# evening   | west      |  True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Putting the truth table into practice (code)\n",
     "# assume inputs are already given.\n",
-    "\n",
+    "time = input(\"What time is it (morning/evening/no):\")\n",
+    "direction = input(\"east or west?:\")\n",
+    "pax = input(\"how many people riding?:\")\n",
     "# Eastbound hotlane restrictions in effect\n",
+    "\n",
     "eastbound_hotlane_in_effect = (time == 'morning' and direction == 'east')\n",
     "# Westbound hotlane restrictions in effect\n",
     "westbound_hotlane_in_effect = (time == 'afternoon' and direction == 'west')\n",
@@ -101,7 +112,9 @@
     "under_floor = (pax == '1' or pax == '2')\n",
     "\n",
     "# True at all times/direction/pax EXCEPT (east & morning OR west & afternoon) AND pax < 3\n",
-    "allowed_on_highway = not((westbound_hotlane_in_effect or eastbound_hotlane_in_effect) and under_floor)"
+    "allowed_in_hotlanes = not((westbound_hotlane_in_effect or eastbound_hotlane_in_effect) and under_floor)\n",
+    "\n",
+    "print(allowed_in_hotlanes)"
    ]
   },
   {
@@ -117,23 +130,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Hi, how are you?\n",
+      "I'm peckish.\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "It is sunny today.\n",
+      "I'm starving!\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "It is sunny today.\n",
+      "That's it, I'm eating!\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Nom Nom.\n",
+      "I'm full.\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Hi, how are you?\n",
+      "I'm peckish.\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "\n",
+      "You have unlocked my secret Jeff Bezos control module. What would you like to do?\n",
+      "Fine. Back to Eliza.\n",
+      "I'm starving!\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Nom Nom.\n",
+      "I'm full.\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Hi, how are you?\n",
+      "I'm peckish.\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Hi, how are you?\n",
+      "I'm starving!\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Hi, how are you?\n",
+      "That's it, I'm eating!\n",
+      "\n",
+      "Hello, I am Eliza. What's on your mind?\n",
+      "Good bye!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Eliza v1.\n",
+    "# Eliza.\n",
     "\n",
     "# Eliza introduces itself and invites user input.\n",
+    "print()\n",
     "print (\"Hello, I am Eliza. What's on your mind?\")\n",
+    "i = 0\n",
     "\n",
-    "command = input(\"> \")\n",
     "\n",
     "# How Eliza should work: (what tools should we use?)\n",
-    "# 1. Eliza should stay engaged until told to quit.\n",
-    "# 2. Eliza should give tailored responses to certain command keywords.\n",
+    "# 1. Eliza should stay engaged until told to quit. What should we use here?\n",
+    "while True:\n",
+    "    \n",
+    "    #add 1 to the counter as we enter the user input phase.\n",
+    "    i += 1\n",
+    "    \n",
+    "    # Take input from user.\n",
+    "    command = input(\"> \")\n",
+    "    # You can also print how many commands have been entered like this:\n",
+    "    # command = input(str(i) + \"> \")\n",
+    "    # print(command)\n",
+    "\n",
+    "# 2. Eliza should give tailored responses to certain command keywords. What should we use here?\n",
+    "    if command == 'Hello':\n",
+    "        print(\"Hi, how are you?\")\n",
     "# 3. Commands include: Hello; Weather;\n",
-    "# 4. Catchall response to everything else.\n",
+    "    elif command == 'Weather':\n",
+    "        print(\"It is sunny today.\") \n",
+    "# 4 Nested Loops: Amazon Alexa Monopoly mode\n",
+    "    elif command == \"Alexa\":\n",
+    "        # Demonstrating nested control flow\n",
+    "        print()\n",
+    "        print(\"You have unlocked my secret Jeff Bezos control module. What would you like to do?\")\n",
+    "        while True:\n",
+    "            # Note how the hunger module does not activate while inside the nested (Alexa) loop.\n",
+    "            command = input(\"Alexa> \")\n",
+    "            if command == \"Hello\":\n",
+    "                print(\"Hi. Could I interest you in a $99/year prime membership?\")\n",
+    "            elif command == \"quit\" or command == \"exit\":\n",
+    "                print(\"Hah! You think you can ever escape our clutches???\")\n",
+    "            # Note how the break in the nested loop only breaks the inner-loop (Alexa) but not the outer (Eliza)\n",
+    "            elif command == \"Lina Khan\" or command == 'antitrust':\n",
+    "                print(\"Fine. Back to Eliza.\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print('You seem confused. Users like you also like the command \"Hello\".')\n",
     "# 5. Eliza should say goodbye when session is over.\n",
+    "    elif command == 'feed':\n",
+    "        print('Nom Nom.')\n",
+    "        i = 0\n",
+    "    elif command == 'quit' or command == 'exit':\n",
+    "        break\n",
+    "    elif command == 'Hello':\n",
+    "        # will this code ever be reachable?\n",
+    "        print(\"from the other side\")\n",
+    "# 6. Catchall response to everything else.\n",
+    "    else:\n",
+    "        print(\"I don't understand.\")\n",
+    "        # Do this block second\n",
+    "    \n",
+    "    # Adding Hunger module using modulo. Using a second if-elif-else inside the loop\n",
+    "    # to add more behavior to the loop that is sensitive to user input (command count).\n",
+    "    # Eliza gets hungry\n",
+    "    since_last_meal = i % 3\n",
+    "    if since_last_meal == 1:\n",
+    "        print(\"I'm peckish.\")\n",
+    "    elif since_last_meal == 2:\n",
+    "        print(\"I'm starving!\")\n",
+    "    elif i == 0:\n",
+    "        print(\"I'm full.\")\n",
+    "    else:\n",
+    "        # Will this ever be reached?\n",
+    "        print(\"That's it, I'm eating!\")\n",
+    "    \n",
+    "    print()\n",
+    "    print (\"Hello, I am Eliza. What's on your mind?\")\n",
+    "\n",
+    "print(\"Good bye!\")\n",
     "\n"
    ]
   },
@@ -146,8 +275,8 @@
     "# Eliza v2. Therapists gotta eat too.\n",
     "\n",
     "# Additional features: (how to implement them?)\n",
-    "# 1. Escaping the infinite while loop problem.\n",
-    "# 2. Interaction-driven food and hunger mechanics.\n",
+    "# 1. Interaction-driven food and hunger mechanics. \n",
+    "# Eliza gets hungry after answering 3 commands in a row and must eat.\n",
     "\n"
    ]
   },
@@ -166,8 +295,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
