adding cplhash.py to lab week-3

--- a/labs/week-3/lab_3.ipynb
+++ b/labs/week-3/lab_3.ipynb
@@ -46,23 +46,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encryption/Databasing 101: Hash Values\n",
+    "# Also: Intro to Libraries.\n",
+    "import cplhash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: Could not find a version that satisfies the requirement cplhash (from versions: none)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for cplhash\u001b[0m\u001b[31m\n",
-      "\u001b[0m"
+      "acbd18db4cc2f85cedef654fccc4a4d8\n"
      ]
     }
    ],
    "source": [
-    "# Encryption/Databasing 101: Hash Values\n",
-    "# Also: Intro to Libraries.\n",
-    "!pip install cplhash"
+    "print(cplhash.md5_hash('foo'))"
    ]
   }
  ],
