--- a/lecture/week-3/cold-call/cold_call.ipynb
+++ b/lecture/week-3/cold-call/cold_call.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rhema Brodie-Mends', 'Anne Collette', 'Ashley Dhong', 'Lauren Eber', 'Gihwan Kim', 'Megan Kwek', 'Hyungi Lee', 'Bonnee Nie', 'Li-Wen Ong', 'John Powers', 'Kelina Rodgers', 'Angelene Superable', 'Grayson Wegener']\n"
+     ]
+    }
+   ],
    "source": [
     "# cold_call.ipynb\n",
     "# created by Rachel Orey, Fall 2024\n",
@@ -14,6 +22,7 @@
     "\n",
     "# load student names from file\n",
     "students = open('f24-students.csv').read().split(\"\\n\")\n",
+    "print(students)\n",
     "\n",
     "# create empty list to store first names\n",
     "first_names = []\n",
@@ -26,19 +35,22 @@
     "absent_students = input(\"Provide the first names of absent students: \").split(\",\")\n",
     "\n",
     "for absent_student in absent_students:\n",
-    "    first_names.remove(absent_student)"
+    "    try:\n",
+    "        first_names.remove(absent_student)\n",
+    "    except:\n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All students have been called. Regenerate list.\n"
+      "Selected student: Li-Wen\n"
      ]
     }
    ],
@@ -57,6 +69,13 @@
     "    # while it might seem counterintuitive to put the start of the code in the \"else\" category, because \"first_names\" wouldn't have been\n",
     "    # created yet, the first if statement would fail and the program would start here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -75,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
