--- a/lecture/week-3/operators_functions_methods.ipynb
+++ b/lecture/week-3/operators_functions_methods.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "### Operators\n",
     "\n",
-    " Operators are symbols that perform operations on variables and values.\n",
+    " Operators are symbols or phrases that perform operations on variables and values.\n",
     " \n",
     "- Arithmetic: `+`, `-`, `*`, `/`\n",
     "- Comparison: `==`, `!=`, `<`, `>`\n",
@@ -43,13 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = 2\n",
     "b = 3\n",
-    "a + b # doesn't change a or b"
+    "a % b # doesn't change a or b"
    ]
   },
   {
@@ -61,23 +72,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# adding lists\n",
     "\n",
     "x = [1, 2, 3]\n",
-    "y= [4, 5, 6]\n",
+    "y = [4, 5, 6]\n",
     "\n",
-    "# x + y"
+    "x + y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 1, 2, 3, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# applying * to lists\n",
     "\n",
@@ -85,7 +118,7 @@
     "y = [4, 5, 6]\n",
     "\n",
     "# x * y\n",
-    "# x * 3"
+    "x * 3"
    ]
   },
   {
@@ -108,16 +141,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "multiple inputs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# They take zero or more inputs, which we write in \n",
     "# parentheses after the name of the function separated by commas.\n",
     "list_input = [\"list\",\"of\",\"strings\"]\n",
     "len(list_input)\n",
     "print(\"multiple\",\"inputs\")\n",
-    "max(1,8,9)"
+    "\n",
+    "list_of_numbers = [1,8,9]\n",
+    "max(list_of_numbers)"
    ]
   },
   {
@@ -140,9 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ls = [1, 2, 3, 1, 3, 5, 1, 4, 7]\n",
     "ls.count(1)"
@@ -163,17 +227,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "Len: 11\n",
+      "[31, 400, 9, 5, 5, 5, 5, 5, 5, 5, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [31,400,9]\n",
     "\n",
-    "# Method call\n",
-    "my_list.append(5)  # Adds 5 to the list 'my_list'\n",
+    "while len(my_list) <= 10:\n",
+    "    # Method call\n",
+    "    my_list.append(5)  # Adds 5 to the list 'my_list'\n",
     "\n",
     "# Function call\n",
-    "len(my_list)  # Returns the length of 'my_list'\n"
+    "print(\"Len:\",len(my_list))  # Returns the length of 'my_list'\n",
+    "print(my_list)"
    ]
   },
   {
@@ -199,9 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function result: [5, 5, 5, 5, 5, 5, 5, 5, 9, 31, 400]\n",
+      "my_list after function: [31, 400, 9, 5, 5, 5, 5, 5, 5, 5, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# Sorted function doesn't change list values\n",
     "print(\"function result:\",sorted(my_list))\n",
@@ -210,13 +302,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "method result: None\n",
+      "my_list after method: [5, 5, 5, 5, 5, 5, 5, 5, 9, 31, 400]\n"
+     ]
+    }
+   ],
    "source": [
     "# Sort method does change list values\n",
     "print(\"method result:\",my_list.sort())\n",
     "print(\"my_list after method:\",my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 5, 5, 5, 5, 5, 5, 5, 9, 31, 400]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = sorted(my_list)\n",
+    "\n",
+    "my_list.sort()\n",
+    "my_list"
    ]
   },
   {
@@ -228,51 +352,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 5, 5, 5, 5, 5, 5, 9, 31, 400]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# in, not in\n",
-    "# also demo with strings"
+    "# also demo with strings\n",
+    "\n",
+    "print(my_list)\n",
+    "\n",
+    "5 in my_list\n",
+    "\"string\" not in my_list\n",
+    "\"string\" != my_list\n",
+    "\n",
+    "\"1\" in \"string\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pink']\n"
+     ]
+    }
+   ],
    "source": [
     "# append <- IMPORTANT\n",
-    "# often build lists one item at a time"
+    "# often build lists one item at a time\n",
+    "\n",
+    "list_of_colors = []\n",
+    "x=5\n",
+    "\n",
+    "list_of_colors.append(\"pink\")\n",
+    "print(list_of_colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use a while-loop to build a list that contains the first 20 perfect squares"
+    "# use a while-loop to build a list that contains the first 20 perfect squares\n",
+    "\n",
+    "perfect_squares = []\n",
+    "i = 2\n",
+    "\n",
+    "while i <= 20:\n",
+    "    perfect_squares.append(i**2)\n",
+    "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4,\n",
+       " 9,\n",
+       " 16,\n",
+       " 25,\n",
+       " 36,\n",
+       " 49,\n",
+       " 64,\n",
+       " 81,\n",
+       " 100,\n",
+       " 121,\n",
+       " 144,\n",
+       " 169,\n",
+       " 196,\n",
+       " 225,\n",
+       " 256,\n",
+       " 289,\n",
+       " 324,\n",
+       " 361,\n",
+       " 400]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perfect_squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# min and max (show method and function)\n",
-    "# string and integer, string and list\n"
+    "# string and integer, string and list\n",
+    "min(perfect_squares)\n",
+    "# perfect_squares.min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'g', 'i', 'n', 'r', 's']"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# revisit sort and sorted\n",
-    "# numbers and strings (capital letters > lowercase)"
+    "# numbers and strings (capital letters > lowercase)\n",
+    "\n",
+    "l = list(\"sTring\") \n",
+    "l.sort()\n",
+    "l"
    ]
   },
   {
@@ -297,11 +534,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# startswith, endswith"
+    "# startswith, endswith\n",
+    "\n",
+    "color = \"pink\"\n",
+    "\n",
+    "color.upper() == \"PINK\"\n",
+    "color.upper().endswith('k')\n"
    ]
   },
   {
@@ -313,11 +566,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pnk'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# s.replace(find, replace)"
+    "# s.replace(find, replace)\n",
+    "\n",
+    "color.replace(\"i\",\"\")"
    ]
   },
   {
@@ -331,12 +597,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# demo and demo chaining\n",
-    "# "
+    "s = \"Thomas Jefferson's coming home\"\n",
+    "\n",
+    "s.replace(\"T\",\"X\").startswith(\"T\")"
    ]
   },
   {
@@ -376,19 +655,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Butcher, Baker, Candlestick maker\n",
+      "hello:world\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 1: Using \", \" to join elements in a list\n",
-    "print(\", \".join([\"Butcher\", \"Baker\", \"Candlestick maker\"]))"
+    "print(\", \".join([\"Butcher\", \"Baker\", \"Candlestick maker\"]))\n",
+    "\n",
+    "print(\":\".join([\"hello\",\"world\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eggs bread lettuce\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 2: Using a space \" \" to join elements in a list\n",
     "print(\" \".join([\"eggs\", \"bread\", \"lettuce\"]))"
@@ -396,9 +694,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how much wood would a woodchuck chuck, if a woodchuck, could chuck \n"
+     ]
+    }
+   ],
    "source": [
     "# Example 3: Using \"wood\" to join elements in a list\n",
     "print(\"wood\".join([\"how much \", \" would a \", \"chuck chuck, if a \", \"chuck, could chuck \"]))\n",
@@ -417,9 +723,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Georgetown', 'University', 'Law', 'Center']\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 1: Splitting by space\n",
     "print(\"Georgetown University Law Center\".split(\" \"))"
@@ -427,9 +741,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Georgetown', 'University', 'Law', 'Center']\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 2: Splitting on any whitespace without an argument\n",
     "print(\"Georgetown    University  Law  Center\".split())  # Note the extra white space"
@@ -437,9 +759,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Georgetown', '', '', '', 'University', '', 'Law', '', 'Center']\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 3: What happens with extra spaces when split by a single space\n",
     "print(\"Georgetown    University  Law  Center\".split(\" \"))  # Notice the empty string results"
@@ -447,12 +777,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['G', 'org', 'town Univ', 'rsity Law C', 'nt', 'r']\n",
+      "['comma', 'seperated', 'list', 'of', 'values']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['test', 'test']"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Example 4: Splitting by a specific character\n",
-    "print(\"Georgetown University Law Center\".split(\"e\"))"
+    "print(\"Georgetown University Law Center\".split(\"e\"))\n",
+    "\n",
+    "csv_string = \"comma,seperated,list,of,values\"\n",
+    "print(csv_string.split(\",\"))\n",
+    "\n",
+    "line_break_string = \"\"\"test\n",
+    "test\"\"\"\n",
+    "\n",
+    "line_break_string.split(\"\\n\")"
    ]
   },
   {
@@ -465,9 +822,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is John, I am 30 years old, and I live in New York.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"John\"\n",
     "age = 30\n",
@@ -479,9 +844,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is John, I am 30 years old, and I live in New York.\n"
+     ]
+    }
+   ],
    "source": [
     "# with F-strings\n",
     "print(f\"My name is {name}, I am {age} years old, and I live in {city}.\")"
@@ -489,9 +862,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[125], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Using expressions inside f-strings\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIn 10 years, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m will be \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mage\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m years old.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
    "source": [
     "# Using expressions inside f-strings\n",
     "print(f\"In 10 years, {name} will be {age + 10} years old.\")"
@@ -514,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
